--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                             <i class="nav-icon fa fa-clipboard-list"></i> Presença
                         </a>
                     </li>
-                    <li class="nav-title">Benefícios</li>
+                    @*<li class="nav-title">Benefícios</li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-gift"></i> Benefícios
@@ -58,7 +58,7 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-clipboard"></i> Tipos de Benefícios
                         </a>
-                    </li>
+                    </li>*@
                     <li class="nav-title">Informações Médicas</li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
@@ -71,7 +71,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/treatmentplace">
                             <i class="nav-icon fa fa-hospital-alt"></i> Locais de tratamento
                         </a>
                     </li>
@@ -80,7 +80,7 @@
                             <i class="nav-icon fa fa-user-md"></i> Médicos
                         </a>
                     </li>
-                    <li class="nav-title">Relatórios</li>
+                    @*<li class="nav-title">Relatórios</li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-file-medical"></i> Relatórios
@@ -96,7 +96,7 @@
                         <a class="nav-link" href="#">
                             <i class="nav-icon fa fa-users"></i> Usuários
                         </a>
-                    </li>
+                    </li>*@
                 </ul>
             </nav>
         </div>
