--- a/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
+++ b/_source/LigaCancer/Views/TreatmentPlace/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.Doctor>
+﻿@model PaginatedList<LigaCancer.Data.Models.PatientModels.TreatmentPlace>
 @using LigaCancer.Code
 @{
-    ViewData["Title"] = "Médicos";
+    ViewData["Title"] = "Cidades";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -11,7 +11,7 @@
             <a href="/">Home</a>
         </li>
         <li class="breadcrumb-item">
-            Médicos
+            Cidades
         </li>
     </ol>
     <div class="container-fluid">
@@ -29,9 +29,9 @@
                                     <div class="card-block ">
                                         <div class="form-horizontal">
                                             <div class="form-group row">
-                                                <label class="col-md-3 form-control-label">Nome</label>
+                                                <label class="col-md-3 form-control-label">Cidade</label>
                                                 <div class="col-md-9">
-                                                    <input class="form-control" name="searchNameString" value="@ViewData["CurrentSearchNameFilter"]" type="text">
+                                                    <input class="form-control" name="searchCityString" value="@ViewData["CurrentSearchCityFilter"]" type="text">
                                                 </div>
                                             </div>
                                         </div>
@@ -51,14 +51,14 @@
                     <div class="col-lg-12">
                         <div class="card">
                             <div class="card-header">
-                                <i class="fa fa-address-card-o"></i> Médicos
+                                <i class="fa fa-address-card-o"></i> Cidades
                             </div>
                             <div class="card-block">
                                 <div class="form-inline">
                                     <div class="form-group">
                                         <div class="btn-group">
-                                            <a asp-action="AddDoctor" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-primary">
-                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Médico
+                                            <a asp-action="AddTreatmentPlace" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-primary">
+                                                <i class="glyphicon glyphicon-plus"></i> Adicionar Cidade
                                             </a>
                                         </div>
                                     </div>
@@ -68,8 +68,8 @@
                                     <thead>
                                         <tr>
                                             <th>
-                                                <a asp-action="Index" asp-route-sortOrder="@ViewData["NameSortParm"]" asp-route-page="@Model.PageIndex">
-                                                    @if (ViewData["NameSortParm"].ToString() == "name_desc")
+                                                <a asp-action="Index" asp-route-sortOrder="@ViewData["CitySortParm"]" asp-route-page="@Model.PageIndex">
+                                                    @if (ViewData["CitySortParm"].ToString() == "name_desc")
                                                     {
                                                         <span class="fa fa-sort-alpha-down"></span>
                                                     }
@@ -77,11 +77,8 @@
                                                     {
                                                         <span class="fa fa-sort-alpha-up"></span>
                                                     }
-                                                    @Html.DisplayNameFor(model => model.FirstOrDefault().Name)
+                                                    @Html.DisplayNameFor(model => model.FirstOrDefault().City)
                                                 </a>
-                                            </th>
-                                            <th>
-                                                @Html.DisplayNameFor(model => model.FirstOrDefault().CRM)
                                             </th>
                                             <th>
                                                 Ações
@@ -93,19 +90,13 @@
                                         {
                                             <tr>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.Name)
+                                                    @Html.DisplayFor(modelItem => item.City)
                                                 </td>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.CRM)
-                                                </td>
-                                                <td>
-                                                    <a asp-action="DetailsDoctor" asp-route-id="@item.DoctorId" class="btn btn-info">
-                                                        Mostrar
-                                                    </a>
-                                                    <a asp-action="EditDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-warning">
+                                                    <a asp-action="EditTreatmentPlace" asp-route-id="@item.TreatmentPlaceId" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-warning">
                                                         Editar
                                                     </a>
-                                                    <a asp-action="DeleteDoctor" asp-route-id="@item.DoctorId" data-toggle="modal" data-target="#modal-action-doctor" class="btn btn-danger">
+                                                    <a asp-action="DeleteTreatmentPlace" asp-route-id="@item.TreatmentPlaceId" data-toggle="modal" data-target="#modal-action-treatmentPlace" class="btn btn-danger">
                                                         Deletar
                                                     </a>
                                                 </td>
@@ -114,7 +105,7 @@
                                     </tbody>
                                 </table>
 
-                                @{await Html.RenderPartialAsync("_PaginationDoctor", Model);}
+                                @{await Html.RenderPartialAsync("_PaginationTreatmentPlace", Model);}
 
                             </div>
                         </div>
@@ -130,10 +121,10 @@
     <!-- /.conainer-fluid -->
 </main>
 
-@await Html.PartialAsync("_Modal", new BootstrapModel { Id = "modal-action-doctor", AreaLabeledId = "modal-action-doctor-label", Size = ModalSize.Medium })
+@await Html.PartialAsync("_Modal", new BootstrapModel { Id = "modal-action-treatmentPlace", AreaLabeledId = "modal-action-treatmentPlace-label", Size = ModalSize.Medium })
 
 @section scripts
     {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
-    <script src="~/js/doctor.js"></script>
+    <script src="~/js/treatmentPlace.js"></script>
 }
