--- a/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
@@ -10,92 +10,115 @@
       data-ajax-loading="#submitSpinner">
 
     @await Html.PartialAsync("_ModalHeader", new ModalHeader { Heading = "Adicionar Paciente" })
-    <div class="modal-body form-horizontal">
-        <h4>Paciente</h4>
-        <hr />
-
+    <div class="modal-body form-horizontal" id="">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <div class="form-group">
-            <label asp-for="FirstName" class="control-label"></label>
-            <input asp-for="FirstName" class="form-control" />
-            <span asp-validation-for="FirstName" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Surname" class="control-label"></label>
-            <input asp-for="Surname" class="form-control" />
-            <span asp-validation-for="Surname" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="RG" class="control-label"></label>
-            <input asp-for="RG" class="form-control" />
-            <span asp-validation-for="RG" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="CPF" class="control-label"></label>
-            <input asp-for="CPF" class="form-control" />
-            <span asp-validation-for="CPF" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="Sex" class="control-label"></label>
-            <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
-            <span asp-validation-for="Sex" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="CivilState" class="control-label"></label>
-            <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control"></select>
-            <span asp-validation-for="CivilState" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label asp-for="DateOfBirth" class="control-label"></label>
-            <input asp-for="DateOfBirth" asp-format="" class="form-control" />
-            <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <div class="checkbox">
-                <label>
-                    <input asp-for="FamiliarityGroup" /> @Html.DisplayNameFor(model => model.FamiliarityGroup)
-                </label>
+        <h4>
+            Paciente
+            <a data-toggle="collapse" href="#collapsePatietn" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
+        </h4>
+        <hr />
+        @* Todo: <div class="collapse show">*@
+        <div class="collapse show" id="collapsePatietn" role="tabpanel" aria-labelledby="headingOne">
+            <div class="form-group">
+                <label asp-for="FirstName" class="control-label"></label>
+                <input asp-for="FirstName" class="form-control" />
+                <span asp-validation-for="FirstName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Surname" class="control-label"></label>
+                <input asp-for="Surname" class="form-control" />
+                <span asp-validation-for="Surname" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="RG" class="control-label"></label>
+                <input asp-for="RG" class="form-control" />
+                <span asp-validation-for="RG" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CPF" class="control-label"></label>
+                <input asp-for="CPF" class="form-control" />
+                <span asp-validation-for="CPF" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Profession" class="control-label"></label>
+                <select asp-for="Profession" asp-items="Model.SelectProfessions" class="form-control"></select>
+                <span asp-validation-for="Profession" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Sex" class="control-label"></label>
+                <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
+                <span asp-validation-for="Sex" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="CivilState" class="control-label"></label>
+                <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control"></select>
+                <span asp-validation-for="CivilState" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DateOfBirth" class="control-label"></label>
+                <input asp-for="DateOfBirth" asp-format="" class="form-control" />
+                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <div class="checkbox">
+                    <label>
+                        <input asp-for="FamiliarityGroup" /> @Html.DisplayNameFor(model => model.FamiliarityGroup)
+                    </label>
+                </div>
             </div>
         </div>
 
         <h4>
             Naturalidade
-            <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
+            <a data-toggle="collapse" href="#collapseNaturality" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
         </h4>
         <hr />
-        <div id="accordion" role="tablist">
-            <div class="collapse" id="collapseOne" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" style="">
-                <div class="form-group">
-                    <label asp-for="Naturality.City" class="control-label"></label>
-                    <input asp-for="Naturality.City" class="form-control" />
-                    <span asp-validation-for="Naturality.City" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Naturality.State" class="control-label"></label>
-                    <input asp-for="Naturality.State" class="form-control" />
-                    <span asp-validation-for="Naturality.State" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Naturality.Country" class="control-label"></label>
-                    <input asp-for="Naturality.Country" class="form-control" />
-                    <span asp-validation-for="Naturality.Country" class="text-danger"></span>
-                </div>
+        <div class="collapse" id="collapseNaturality" role="tabpanel" aria-labelledby="headingOne">
+            <div class="form-group">
+                <label asp-for="Naturality.City" class="control-label"></label>
+                <input asp-for="Naturality.City" class="form-control" />
+                <span asp-validation-for="Naturality.City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Naturality.State" class="control-label"></label>
+                <input asp-for="Naturality.State" class="form-control" />
+                <span asp-validation-for="Naturality.State" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Naturality.Country" class="control-label"></label>
+                <input asp-for="Naturality.Country" class="form-control" />
+                <span asp-validation-for="Naturality.Country" class="text-danger"></span>
             </div>
         </div>
 
-        @*<div class="card-header" id="headingOne" role="tab">
-            <h5 class="mb-0">
-                <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">Collapsible Group Item #1</a>
-            </h5>
-        </div>
-        <div class="collapse" id="collapseOne" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" style="">
-            <div class="card-body">
-                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt
-                aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat
-                craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        <h4>
+            Informação do Paciente
+            <a data-toggle="collapse" href="#collapsePatientInformation" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
+        </h4>
+        <hr />
+        <div class="collapse" id="collapsePatientInformation" role="tabpanel" aria-labelledby="headingOne">
+            <div class="form-group">
+                <label asp-for="PatientInformation.CancerTypes" class="control-label"></label>
+                <select asp-for="PatientInformation.CancerTypes" class="form-control"></select>
+                <span asp-validation-for="PatientInformation.CancerTypes" class="text-danger"></span>
             </div>
-        </div>*@
+            <div class="form-group">
+                <label asp-for="PatientInformation.Medicines" class="control-label"></label>
+                <select asp-for="PatientInformation.Medicines" class="form-control"></select>
+                <span asp-validation-for="PatientInformation.Medicines" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PatientInformation.Doctors" class="control-label"></label>
+                <select asp-for="PatientInformation.Doctors" class="form-control"></select>
+                <span asp-validation-for="PatientInformation.Doctors" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="PatientInformation.TreatmentPlaces" class="control-label"></label>
+                <select asp-for="PatientInformation.TreatmentPlaces" class="form-control"></select>
+                <span asp-validation-for="PatientInformation.TreatmentPlaces" class="text-danger"></span>
+            </div>
+        </div>
 
 
     </div>
