--- a/_source/LigaCancer/Views/Patient/Index.cshtml
+++ b/_source/LigaCancer/Views/Patient/Index.cshtml
@@ -92,13 +92,13 @@
                                         {
                                             <tr>
                                                 <td>
-                                                    @Html.DisplayFor(modelItem => item.FirstName)
+                                                    @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.Surname)
                                                 </td>
                                                 <td>
-                                                    <a asp-action="DetailsPatient" asp-route-id="@item.PatientId" class="btn btn-info disabled">
+                                                    <a asp-action="DetailsPatient" asp-route-id="@item.PatientId" class="btn btn-info">
                                                         Mostrar
                                                     </a>
-                                                    <a asp-action="EditPatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning disabled">
+                                                    <a asp-action="EditPatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-warning">
                                                         Editar
                                                     </a>
                                                     <a asp-action="DeletePatient" asp-route-id="@item.PatientId" data-toggle="modal" data-target="#modal-action-patient" class="btn btn-danger">
