--- a/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_AddPatient.cshtml
@@ -11,7 +11,7 @@
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Adicionar Paciente" }' />
 
-    <div class="modal-body form-horizontal row" id="">
+    <div class="modal-body form-horizontal row">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="col-md-6">
@@ -40,7 +40,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Profession" class="control-label"></label>
-                    <select asp-for="Profession" asp-items="Model.SelectProfessions" class="form-control customSelect2" data-tags="true" data-placeholder="Informe a profissão" data-allow-clear="true"></select>
+                    <input asp-for="Profession" class="form-control" />
                     <span asp-validation-for="Profession" class="text-danger"></span>
                 </div>
                 <div class="form-group">
