--- a/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
+++ b/_source/LigaCancer/Views/Patient/_EditPatient.cshtml
@@ -11,121 +11,115 @@
 
     <partial name="_ModalHeader" model='new ModalHeader { Heading = "Editar Paciente" }' />
 
-    <div class="modal-body form-horizontal">
+    <div class="modal-body form-horizontal row">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-        <h4>
-            Paciente
-            <a data-toggle="collapse" href="#collapsePatient" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
-        </h4>
-        <hr />
-
-        <div class="collapse show" id="collapsePatient" role="tabpanel" aria-labelledby="headingOne">
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Surname" class="control-label"></label>
-                <input asp-for="Surname" class="form-control" />
-                <span asp-validation-for="Surname" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="RG" class="control-label"></label>
-                <input asp-for="RG" class="form-control" />
-                <span asp-validation-for="RG" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CPF" class="control-label"></label>
-                <input asp-for="CPF" class="form-control" />
-                <span asp-validation-for="CPF" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Profession" class="control-label"></label>
-                <select asp-for="Profession" asp-items="Model.SelectProfessions" class="form-control customSelect2" data-tags="true" data-placeholder="Informe a profissão" data-allow-clear="true"></select>
-                <span asp-validation-for="Profession" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MonthlyIncome" class="control-label"></label>
-                <input asp-for="MonthlyIncome" class="form-control" />
-                <span asp-validation-for="MonthlyIncome" class="text-dange"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Sex" class="control-label"></label>
-                <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
-                <span asp-validation-for="Sex" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CivilState" class="control-label"></label>
-                <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control"></select>
-                <span asp-validation-for="CivilState" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfBirth" class="control-label"></label>
-                <input asp-for="DateOfBirth" asp-format="" class="form-control" />
-                <span asp-validation-for="DateOfBirth" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="checkbox">
-                    <label>
-                        <input asp-for="FamiliarityGroup" /> @Html.DisplayNameFor(model => model.FamiliarityGroup)
-                    </label>
+        <div class="col-md-6">
+            <h4>Paciente</h4>
+            <hr />
+            <div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control" />
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Surname" class="control-label"></label>
+                    <input asp-for="Surname" class="form-control" />
+                    <span asp-validation-for="Surname" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="RG" class="control-label"></label>
+                    <input asp-for="RG" class="form-control" />
+                    <span asp-validation-for="RG" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CPF" class="control-label"></label>
+                    <input asp-for="CPF" class="form-control" />
+                    <span asp-validation-for="CPF" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Profession" class="control-label"></label>
+                    <input asp-for="Profession" class="form-control" />
+                    <span asp-validation-for="Profession" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="MonthlyIncome" class="control-label"></label>
+                    <input asp-for="MonthlyIncome" class="form-control" />
+                    <span asp-validation-for="MonthlyIncome" class="text-dange"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Sex" class="control-label"></label>
+                    <select asp-for="Sex" asp-items="Html.GetEnumSelectList<Globals.Sex>()" class="form-control"></select>
+                    <span asp-validation-for="Sex" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="CivilState" class="control-label"></label>
+                    <select asp-for="CivilState" asp-items="Html.GetEnumSelectList<Globals.CivilState>()" class="form-control"></select>
+                    <span asp-validation-for="CivilState" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DateOfBirth" class="control-label"></label>
+                    <input asp-for="DateOfBirth" class="form-control" />
+                    <span asp-validation-for="DateOfBirth" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <div class="checkbox">
+                        <label>
+                            <input asp-for="FamiliarityGroup" /> @Html.DisplayNameFor(model => model.FamiliarityGroup)
+                        </label>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <h4>
-            Naturalidade
-            <a data-toggle="collapse" href="#collapseNaturality" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
-        </h4>
-        <hr />
-        <div class="collapse" id="collapseNaturality" role="tabpanel" aria-labelledby="headingOne">
-            <div class="form-group">
-                <label asp-for="Naturality.City" class="control-label"></label>
-                <input asp-for="Naturality.City" class="form-control" />
-                <span asp-validation-for="Naturality.City" class="text-danger"></span>
+        <div class="col-md-6">
+            <h4>Naturalidade</h4>
+            <hr />
+            <div>
+                <div class="form-group">
+                    <label asp-for="Naturality.City" class="control-label"></label>
+                    <input asp-for="Naturality.City" class="form-control" />
+                    <span asp-validation-for="Naturality.City" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Naturality.State" class="control-label"></label>
+                    <input asp-for="Naturality.State" class="form-control" />
+                    <span asp-validation-for="Naturality.State" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Naturality.Country" class="control-label"></label>
+                    <input asp-for="Naturality.Country" class="form-control" />
+                    <span asp-validation-for="Naturality.Country" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Naturality.State" class="control-label"></label>
-                <input asp-for="Naturality.State" class="form-control" />
-                <span asp-validation-for="Naturality.State" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Naturality.Country" class="control-label"></label>
-                <input asp-for="Naturality.Country" class="form-control" />
-                <span asp-validation-for="Naturality.Country" class="text-danger"></span>
+
+            <h4>Informação do Paciente</h4>
+            <hr />
+            <div>
+                <div class="form-group">
+                    <label asp-for="PatientInformation.CancerTypes" class="control-label"></label>
+                    <select asp-for="PatientInformation.CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control customSelect2" data-tags="true"></select>
+                    <span asp-validation-for="PatientInformation.CancerTypes" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PatientInformation.Medicines" class="control-label"></label>
+                    <select asp-for="PatientInformation.Medicines" asp-items="Model.SelectMedicines" class="form-control customSelect2" data-tags="true"></select>
+                    <span asp-validation-for="PatientInformation.Medicines" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PatientInformation.Doctors" class="control-label"></label>
+                    <select asp-for="PatientInformation.Doctors" asp-items="Model.SelectDoctors" class="form-control customSelect2" data-tags="true"></select>
+                    <span asp-validation-for="PatientInformation.Doctors" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PatientInformation.TreatmentPlaces" class="control-label"></label>
+                    <select asp-for="PatientInformation.TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control customSelect2" data-tags="true"></select>
+                    <span asp-validation-for="PatientInformation.TreatmentPlaces" class="text-danger"></span>
+                </div>
             </div>
         </div>
 
-        <h4>
-            Informação do Paciente
-            <a data-toggle="collapse" href="#collapsePatientInformation" aria-expanded="false" aria-controls="collapseOne" class="collapsed fa fa-arrow-alt-circle-down" style="margin-left: 1rem;"></a>
-        </h4>
-        <hr />
-        <div class="collapse" id="collapsePatientInformation" role="tabpanel" aria-labelledby="headingOne">
-            <div class="form-group">
-                <label asp-for="PatientInformation.CancerTypes" class="control-label"></label>
-                <select asp-for="PatientInformation.CancerTypes" asp-items="Model.SelectCancerTypes" class="form-control customSelect2" data-tags="true"></select>
-                <span asp-validation-for="PatientInformation.CancerTypes" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PatientInformation.Medicines" class="control-label"></label>
-                <select asp-for="PatientInformation.Medicines" asp-items="Model.SelectMedicines" class="form-control customSelect2" data-tags="true"></select>
-                <span asp-validation-for="PatientInformation.Medicines" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PatientInformation.Doctors" class="control-label"></label>
-                <select asp-for="PatientInformation.Doctors" asp-items="Model.SelectDoctors" class="form-control customSelect2" data-tags="true"></select>
-                <span asp-validation-for="PatientInformation.Doctors" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PatientInformation.TreatmentPlaces" class="control-label"></label>
-                <select asp-for="PatientInformation.TreatmentPlaces" asp-items="Model.SelectTreatmentPlaces" class="form-control customSelect2" data-tags="true"></select>
-                <span asp-validation-for="PatientInformation.TreatmentPlaces" class="text-danger"></span>
-            </div>
-        </div>
-        <input type="hidden" asp-for="PatientId" value="@Model.PatientId" />
     </div>
 
     <partial name="_ModalFooter" model="new ModalFooter { }" />
