--- a/_source/LigaCancer/Views/Shared/_Layout.cshtml
+++ b/_source/LigaCancer/Views/Shared/_Layout.cshtml
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <environment names="Development">
-        <link href="~/css/fontawesome.min.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/style.css" rel="stylesheet" asp-append-version="true" />
-        <link href="~/css/custom.css" rel="stylesheet" asp-append-version="true" />
+        <link href="~/css/fontawesome.min.css" rel="stylesheet" />
+        <link href="~/css/style.css" rel="stylesheet"/>
+        <link href="~/css/custom.css" rel="stylesheet"/>
     </environment>
     <environment  exclude="Development">
         <link href="~/dist/css/main.min.css" rel="stylesheet" asp-append-version="true" />
@@ -122,10 +122,10 @@
     </footer>
 
     <environment names="Development">
-        <script src="~/lib/jquery/jquery.min.js" asp-append-version="true"></script>
-        <script src="~/js/coreui.min.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap/js/bootstrap.min.js" asp-append-version="true"></script>
-        <script src="~/js/main.js" asp-append-version="true"></script>
+        <script src="~/lib/jquery/jquery.min.js"></script>
+        <script src="~/js/coreui.min.js"></script>
+        <script src="~/lib/bootstrap/js/bootstrap.min.js"></script>
+        <script src="~/js/main.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="~/dist/js/main.min.js" asp-append-version="true"></script>
